--- a/styles/Page.module.css
+++ b/styles/Page.module.css
@@ -9,6 +9,9 @@
     width: 500px;
     border-radius: 20px;
 }
+.date {
+    font-size: 12px;
+}
 
 @media only screen and (max-width: 800px){
     .Page > img {
