--- a/styles/Post.module.css
+++ b/styles/Post.module.css
@@ -18,6 +18,9 @@
     border-radius: 20px;
     border: solid rgba(255, 255, 255, 0.527) 1px;
 }
+.post > p {
+    margin: 0px;
+}
 
 @media only screen and (max-width: 800px){
     .post > img {
